[package]
name = "co"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.6", features = ["derive"] }
anyhow = "1.0.52"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "net", "time"] }
nix = "0.23.1"
